templates/monitoring.yaml
# ---------------------------
# Namespace
# ---------------------------
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: monitoring
---
# ---------------------------
# Prometheus Deployment + Service
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  # namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml  # <-- FIX: mount file instead of dir to avoid Back-off
            - name: prometheus-data
              mountPath: /prometheus
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  # namespace: monitoring
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
---
# ---------------------------
# Grafana Deployment + Service + Data Source
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  # namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  # namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  # namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: docker.io/prometheuscommunity/postgres-exporter:v0.18.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9187
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter-service
  # namespace: monitoring
spec:
  selector:
    app: postgres-exporter
  ports:
    - port: 9187
      targetPort: 9187
