templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-db
spec:
  selector:
    app: odoo-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
